Fix HIPPS calculator radio buttons being invisible/unselectable
The Safari and Firefox browser-specific CSS blocks in
cross_browser_compatibility.css applied appearance:none to ALL input
elements, stripping native radio button rendering down to 2x2px dots.
The main input rule correctly excluded radios, but the @supports and
@-moz-document blocks did not. Added :not([type="radio"]):not([type="checkbox"])
exclusions and explicit radio styling in hipps_calculator.css.

--- a/static/cross_browser_compatibility.css
+++ b/static/cross_browser_compatibility.css
@@ -366,7 +366,7 @@ select:focus {
         -webkit-appearance: none;
     }
     
-    input,
+    input:not([type="radio"]):not([type="checkbox"]),
     textarea,
     select {
         -webkit-appearance: none;
@@ -386,7 +386,7 @@ select:focus {
         -moz-appearance: none;
     }
     
-    input,
+    input:not([type="radio"]):not([type="checkbox"]),
     textarea,
     select {
         -moz-appearance: none;
